[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.4"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "7ba456d008a3a657e01589de64cb0eeb8aca532b", features = ["aes"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "7ba456d008a3a657e01589de64cb0eeb8aca532b" }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.138"
itertools = "0.14.0"
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.13.0"
prost-types = "0.14"
tonic = "0.14"
semver = { version = "1.0.26", features = ["serde"] }
once_cell = "1.21.3"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3"
reqwest = "0.12"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
prometheus = "0.14.0"
chrono = "0.4"
serde_yaml = "0.9"
snap = "1.1.0"
git-version = "0.3.9"

# Sui dependencies
sui_types = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "sui-types"}
mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "shared-crypto" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036" }
prometheus_closure_metric = { git = "https://github.com/MystenLabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "prometheus-closure-metric" }
sui-move-build = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "sui-move-build" }
test-cluster = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "test-cluster" }
move-package-alt = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "move-package-alt" }
move-package-alt-compilation = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "move-package-alt-compilation" }
sui-package-alt = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "sui-package-alt" }
sui-rpc-api = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "sui-rpc-api" }
sui_keys = { git = "https://github.com/mystenlabs/sui", rev = "6c3a7475b6fd4aea9b9f9443a6cfad01a135c036", package = "sui-keys" }

sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e5c53de2e9570229b63bd0508b43f27c11cb5f76", package = "sui-sdk-types", features = ["serde"] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "e5c53de2e9570229b63bd0508b43f27c11cb5f76", package = "sui-rpc" }

[profile.release]
panic = 'abort'
