[package]
name = "aggregator-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aggregator-server"
path = "src/main.rs"

[dependencies]
seal-sdk = { path = "../seal-sdk" }
seal-committee = { path = "../seal-committee" }
crypto = { path = "../crypto" }

mysten-service.workspace = true
sui-sdk-types.workspace = true
sui-rpc.workspace = true
fastcrypto.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
