[package]
name = "crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
rand.workspace = true
serde.workspace = true
hex.workspace = true
bcs.workspace = true
itertools.workspace = true
serde_with.workspace = true
sui-sdk-types.workspace = true
fastcrypto-lattice = { git = "https://github.com/MystenLabs/fastcrypto-lattice", rev = "20a0d5c" }

typenum = "1.18.0"

[dev-dependencies]
sui_types = { workspace = true }