[package]
name = "dkg-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastcrypto = { workspace = true}
fastcrypto-tbls = { workspace = true}
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
rand.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
sui_types.workspace = true
sui-rpc = { workspace = true }
prost-types = "0.13"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }

[[bin]]
name = "dkg-cli"
path = "src/main.rs"