[package]
name = "dkg-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
seal-committee = { path = "../seal-committee" }

fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
rand.workspace = true
anyhow.workspace = true
sui-sdk-types.workspace = true
tokio.workspace = true

[[bin]]
name = "dkg-cli"
path = "src/main.rs"