[package]
name = "key-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "key-server"
path = "src/server.rs"

[dependencies]
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bcs.workspace = true
tracing.workspace = true
mysten-service.workspace = true
move-core-types.workspace = true
mvr_types = { git = "https://github.com/MystenLabs/mvr", rev = "f2bdba1d215fea666465e05ce234d0a11736d4ce", package = "mvr-types" }

tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
crypto = { path = "../crypto" }
tap = "1.0.1"
prometheus = "0.13.3"
anyhow = "1.0.79"
once_cell = "1.20.2"
chrono = "0.4.39"
semver = { version = "1.0.26", features = ["serde"] }
jsonrpsee = "0.24.0"
serde_yaml = "0.9"
duration-str = "0.17.0"
git-version = "0.3.9"
moka = { version = "0.12.10", features = ["sync"] }
snap = "1.1.0"
reqwest = { version = "0.12", features = ["json"] }
serde_with = { workspace = true, features = ["base64"] }
hostname = "0.4"

move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "cfc244d8751b9e4f553bf127008f9cff44c89506" }
move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "cfc244d8751b9e4f553bf127008f9cff44c89506" }
sui-sdk-types = { workspace = true }
sui-transaction-builder = { workspace = true }
sui-rpc = { workspace = true }
sui-crypto = { workspace = true }
thiserror = "1.0"
prost-types = "0.13"
prometheus_closure_metric = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0", package = "prometheus-closure-metric" }
hyper-util = "0.1.10"
http-body-util = "0.1.2"
futures = "0.3"
seal-sdk = { path = "../seal-sdk" }

[dev-dependencies]
tracing-test = "0.2.5"
test_cluster = { git = "https://github.com/mystenlabs/sui", rev = "42ba6c0", package = "test-cluster" }
sui_move_build = { git = "https://github.com/mystenlabs/sui", rev = "42ba6c0", package = "sui-move-build" }
temp-env = { version = "0.3", features = ["async_closure"] }
