[package]
name = "seal-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crypto = { path = "../crypto" }
seal-sdk = { path = "../seal-sdk" }

clap.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
reqwest.workspace = true
tokio.workspace = true

sui_sdk.workspace = true
sui-sdk-types.workspace = true
sui_types.workspace = true
