[package]
name = "seal-committee-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "seal_committee_cli"
path = "src/lib.rs"

[dependencies]
seal-committee = { path = "../seal-committee" }

fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
rand.workspace = true
anyhow.workspace = true
sui-sdk-types.workspace = true
tokio.workspace = true
serde_yaml.workspace = true
sui_sdk.workspace = true
sui_types.workspace = true
sui-move-build.workspace = true
move-package-alt-compilation.workspace = true
sui-package-alt.workspace = true
sui-rpc.workspace = true
prost-types.workspace = true
dirs = "5.0"

[dev-dependencies]
test-cluster.workspace = true
move-core-types.workspace = true
tempfile = "3.15.0"
crypto = { path = "../crypto" }

[[bin]]
name = "seal-committee-cli"
path = "src/main.rs"